# Masters

./: README.md  expenses.db
cpp-expense-tracker/: Makefile  main.cpp
cpp-qt-expense-tracker/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  expenses.db
python-django-expense-tracker/: README.md
python-django-expense-tracker/expense_site/: asgi.py  settings.py  wsgi.py
python-django-expense-tracker/static/tracker/: styles.css
python-django-expense-tracker/templates/tracker/: expense_list.html
python-django-expense-tracker/tracker/: admin.py  db.py  forms.py  models.py  urls.py  views.py
python-expense-tracker/: expense_tracker.py  expenses.json
